/*
 The Factory Pattern defines an interface for creating an object,
 but delegates to a subclass the ability and responsibility to create
 one or another object with the appropriate instance.
 */

public interface Price {
    double getPrice();
}
