
public class PriceEur implements Price {
    @Override
    public double getPrice() {
        return 1.3;
    }
}
