
public class PriceGbp implements Price {
    @Override
    public double getPrice() {
        return 2.1;
    }
}
