
public class PriceUsd implements Price{
    @Override
    public double getPrice() {
        return 0.94;
    }
}
